# faas-client

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.teamcity/: pom.xml  settings.kts
.teamcity/integration/: Integration.kt
.teamcity/patches/projects/: _Self.kts
.teamcity/patches/templates/: NexusDockerLogin.kts
.teamcity/templates/: DockerLogin.kt  NexusDockerLogin.kt
faas_client/: __init__.py  exception.py  faas_client.py
